k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: govambiental-api
  labels:
    app.kubernetes.io/name: govambiental-api
    app.kubernetes.io/part-of: govambiental
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: govambiental-api
