k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: govambiental-api
  labels:
    app.kubernetes.io/name: govambiental-api
    app.kubernetes.io/part-of: govambiental
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  ingressClassName: nginx
  rules:
    - host: govambiental.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: govambiental-api
                port:
                  name: http
